# grilo

./: .travis.yml  Makefile.am  configure.ac  grilo-media-cache-0.1.pc.in  grilo-media-cache-uninstalled.pc.in
bindings/vala/: grilo-0.1.vapi
bindings/vala/grilo-0.1/: grilo-0.1.gi
help/: Makefile.am
help/C/: index.page
libs/: Makefile.am
libs/media-cache/: Makefile.am  grl-media-cache.c  grl-media-cache.h
src/: Makefile.am  grilo.h  grl-error.h  grl-media-cache.c  grl-media-cache.h  grl-media-source.c  grl-media-source.h  grl-metadata-source.c  grl-metadata-source.h  grl-multiple.c  grl-plugin-registry.c
src/data/: grl-data-multi.c  grl-data-multi.h  grl-data.c  grl-data.h  grl-media-audio.c  grl-media-audio.h  grl-media-image.c  grl-media-image.h  grl-media-video.c  grl-media-video.h  grl-media.c  grl-media.h  grl-property.c  grl-property.h  grl-related-keys.c  grl-related-keys.h
tools/grilo-test-ui/: main.c
tools/vala/: grilo-test.vala
